[gd_scene load_steps=6 format=3 uid="uid://bx8nr7h4qld5m"]

[ext_resource type="Script" uid="uid://3qb714gq0iu4" path="res://scripts/npcs/npc_base.gd" id="1_npc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_npc"]
radius = 0.3
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npc"]
albedo_color = Color(0.2, 0.4, 0.8, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_npc"]
radius = 0.3
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_detection"]
radius = 3.0

[node name="NPCBase" type="CharacterBody3D"]
script = ExtResource("1_npc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_npc")
surface_material_override/0 = SubResource("StandardMaterial3D_npc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_npc")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="NameLabel" type="Label3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.536268, 0)
billboard = 1
text = "NPC Name"
font_size = 18
outline_size = 8

[node name="RoleLabel" type="Label3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.336268, 0)
billboard = 1
text = "Role"
font_size = 14
outline_size = 6

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("SphereShape3D_detection")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_body_exited"]
